--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>jamb</title>
 </head>
 <body>
-    <div>
-        <img src="" alt="">
+    <div class="logo">
+        <img src="https://efacility.jamb.gov.ng/assets/admin/img/logo_big.png" alt="jamb logo">
     </div>
     <div class="content">
         <h1>login to your account</h1>
