--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <form>
                
                 <div class="email">
+                    <!-- <img src="https://th.bing.com/th?q=Email+Icon+White&w=120&h=120&c=1&rs=1&qlt=90&cb=1&pid=InlineBlock&mkt=en-US&cc=US&setlang=en&adlt=moderate&t=1&mw=247" alt=""> -->
                     <label for="e-mail adress"></label>
                     <input type="email" placeholder="e-mail adress" required>
                 </div>
@@ -28,15 +29,16 @@
             
             </form>
             <div class="button">
-                <button>login</button>
+                <button>Login</button>
             </div>
             <div class="paragraph">
-                </p> don't have an account yet?</p>
-                <button>create an account</button>
+                </p> Don't have an account yet?</p>
+                <a href="">create an account</a>
+                <!-- <button>create an account</button> -->
             </div>
-            <div forgotPassword>
-                <p>forgot your password</p>
-                <p>click <button>here</button> to reset your password.</p>
+            <div class="forgotPassword">
+                <h4>forgot your password?</h4>
+                <p>Click  <a href="">here</a> to reset your password.</p>
             </div>
         </div>
         <div class="end">
