--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <div class="paragraph">
                 </p> Don't have an account yet?</p>
                 <a href="">create an account</a>
-                <!-- <button>create an account</button> -->
             </div>
             <div class="forgotPassword">
                 <h4>forgot your password?</h4>
@@ -42,7 +41,9 @@
             </div>
         </div>
         <div class="end">
-            <p>2022 Joint Admissions and Matricularion Board (JAMB)</p>
+            <p>
+                2022 © Joint Admissions and Matriculation Board (JAMB)
+            </p>
         </div>
     </div>
 </body>
